# tuanrong-meow-notes

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260623_0001_enable_postgis_pgcrypto.py  20260623_0002_create_auth_tables.py  20260624_0003_create_map_tables.py  20260624_0004_remove_sample_map_points.py  20260625_0005_add_profile_completion_fields.py  20260625_0006_clear_profile_question_placeholders.py  20260627_0007_create_file_asset_tables.py  20260627_0008_create_cat_archive_tables.py  20260629_0009_create_summer_feeding_task_tables.py  20260630_0010_add_tencent_map_poi_fields.py  20260703_0011_create_supply_point_tables.py  20260706_0012_create_medicine_tables.py  20260709_0013_add_wechat_openid_to_users.py  20260712_0014_add_file_content_security.py  20260712_0015_create_wechat_guests.py  20260716_0015_add_meow_no_auto_sequence.py  (+5 more)
backend/app/: __init__.py  main.py
backend/scripts/: grant_president.py
backend/tests/: conftest.py  test_admin_users_api.py  test_auth_api.py  test_auth_models.py  test_auth_security.py  test_auth_wechat.py  test_cats_api.py  test_cors.py  test_database.py  test_errors.py  test_file_content_security.py  test_files_api.py  test_files_storage.py  test_guest_recording.py  test_health.py  test_landmarks_api.py  test_map_api.py  test_map_seed_cleanup_migration.py  test_me_api.py  test_medicines_api.py  test_medicines_pagination.py  test_notifications_api.py  test_profile_api.py  test_public_api.py  test_super_admin_users_api.py  test_supplies_api.py  test_tasks_api.py  test_tasks_pagination.py  test_titles_api.py
docs/: Git版本管理说明.md  (+4 more)
(+391 files in other folders)
